--- a/md.css
+++ b/md.css
@@ -1,16 +1,14 @@
 body{
-     background-color: rgb(230, 203, 166);
-     
-    
-   
+     background-color: rgb(236, 159, 86);  
 }
+
 h1{
 animation: type 3s steps(14) infinite alternate;
 overflow:hidden;
 white-space: nowrap;
 border-right:4px solid black;
-width:13ch;
-}
+width:13ch;}
+
 @keyframes type{
 0%{
     width:0ch;
@@ -18,5 +16,9 @@ width:13ch;
 100%{
     width:14ch;
 }
+}
+
+h3{
+    text-align: center;
 }
 
