--- a/md.css
+++ b/md.css
@@ -1,24 +1,63 @@
-body{
-     background-color: rgb(236, 159, 86);  
+@keyframes head1{
+    0% { background-color: floralwhite; 
+            border-width:inherit}
+    25%{ background-color:mistyrose;
+        border-width:inherit}
+   
+   
+   
 }
+/* h1{
+    
+    overflow:hidden;
+    white-space: nowrap;
+    border-right:4px solid black;
+    width:13ch;}
+    
+    @keyframes type{
+    0%{
+        width:0ch;
+    }
+    100%{
+        width:14ch;
+    }
+    } */
+#header h1{
+    display:flex;
+    /* border-radius: 20%; */
+  animation: type 3s steps(14) infinite alternate;
+    margin-left: 25%;
+    margin-right: 20%;
+    flex-direction:column;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: fantasy;
+    font-size: 100px;
+    color:firebrick;
+    animation-name: head1;
+    animation-duration: 4s;
+  
+    animation-iteration-count: infinite;
+    
+}
+#main-notice{
+display:flex;
+flex-direction:row;
+flex-wrap:wrap;
+flex-direction: column;
+align-content: center;
+justify-content:center;
+flex-basis:200px;
 
-h1{
-animation: type 3s steps(14) infinite alternate;
-overflow:hidden;
-white-space: nowrap;
-border-right:4px solid black;
-width:13ch;}
-
-@keyframes type{
-0%{
-    width:0ch;
 }
-100%{
-    width:14ch;
+.notice-head{
+    margin-top:40px;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: cursive;
+    border: 2px black dashed;
+    flex-basis:200px;
 }
-}
-
-h3{
-    text-align: center;
-}
-
