--- a/md.css
+++ b/md.css
@@ -15,6 +15,7 @@ display:block;
 max-width: 1000px;
 padding:50px;
 box-shadow: 0 15px 20px rgba(0,0,0,.2);
+
 }
 
 
@@ -50,12 +51,9 @@ h1{
 
 #main-notice{
 display:flex;
-flex-direction:row;
-flex-wrap:wrap;
-flex-direction: column;
-align-content: center;
-justify-content:center;
-flex-basis:200px;
+flex-wrap: wrap;
+justify-content: space-around;
+align-items: center;
 }
 
 .notice-head{
@@ -65,5 +63,5 @@ flex-basis:200px;
     justify-content: center;
     font-family: cursive;
     border: 2px black dashed;
-    flex-basis:200px;
+    
 }
