--- a/md.css
+++ b/md.css
@@ -27,12 +27,13 @@ box-shadow: 0 15px 20px rgba(0,0,0,.2);
 }
 h1{
     
+    margin-left:30vw;
     animation: type 2s steps(14) infinite alternate;
     overflow:hidden;
     white-space: nowrap;
     border-right:4px solid black;
     width:13ch;
-    margin-left:500px;
+   
     color: black;   
 }
     
@@ -44,9 +45,12 @@ h1{
         width:14ch;
     }
     } 
-#header h1{
-    display:flex;   
+#header-1 {
+   display:flex;
+ margin-top: 20px;
+ padding:20px;
 }
+
 
 
 #main-notice{
