--- a/blog.css
+++ b/blog.css
@@ -1,3 +1,58 @@
-.title{
-    text-align: center;
+.header{
+    display:flex;
+    justify-content: center;
+    padding:40px;
+    
+}
+.header h2{
+    font-family: fantasy;
+    font-size: 100px;
+    color:chocolate;
+}
+
+/* MOdal edits */
+.modal-container1{
+    background-color:rgba(0,0,0,0.3);
+    position:fixed;
+    top:0;
+    /* left:0; */
+    height:100vh;
+    width:100vw;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+}
+.modal1{
+    margin: 20vh 10vw;
+    align-items: flex-end;
+    justify-content: center;
+    background-color: white;
+    padding:10px;
+    border-radius: 20px;
+    height:50vh;
+    
+}
+.show{
+    display:block;
+}
+.hide{
+    display:none;
+}
+button{
+    border: black 2px solid;
+    border-bottom-left-radius: 15px;
+    float:center;
+    padding:6px;
+    background-color: lightgreen;
+    font-size: medium;
+    border-radius: 50em;
+    transition-duration: 0.4s;
+}
+button:hover{
+    background-color:red;
+    color: white;
+    border-radius: 20px;
+
 }
