--- a/blog1.css
+++ b/blog1.css
@@ -1,69 +1,96 @@
-body{
-    background: linear-gradient(to right,rgba(226, 144, 20, 0.65),rgba(137, 196, 43, 0.65)),url("mdlogo.jpeg");
-    background-size: auto;
-    background-repeat: no-repeat;
-    height:100vh;                   
+body {
+  background: linear-gradient(
+      to right,
+      rgba(226, 144, 20, 0.65),
+      rgba(137, 196, 43, 0.65)
+    ),
+    url("mdlogo.jpeg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
-.title{
-    font-family: sans-serif;
-    font-size: 40px;
-    background-color:rgba(0,0,0,0.5);
-    color: whitesmoke;
-    padding: 15px;
-    border-radius: 10px;
-    z-index:0
+.title {
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
+  font-size: 40px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: whitesmoke;
+  padding: 15px;
+  border-radius: 10px;
+  z-index: 0;
 }
-.title:hover{
-   z-index: 1;
-   box-shadow: 0 8px 50px rgba(0,0,0,0.2);
-   transform:scale(1.05);
-}
-
-.header{
-    display:flex;
-    align-items:flex-end;
-    padding:70px;
-    justify-content: center;
-    align-items: flex-end;
-}
-.form{
-    background-color: rgba(0,0,0,0.5);
-    border-radius: 10px;
-    padding: 10px;
-    max-width: 500px;
-    height: auto;
-    color:whitesmoke;
-    font-family: sans-serif;
-    z-index:0;
-}
-.form:hover{
-    z-index:1;
-    box-shadow: 0 8px 50px rgba(0,0,0,0.2);
-    transform:scale(1.05);
-}
-.content{
-    margin-left: 10px;
-    margin-right:10px ;
-}
-#blog-title{
-    border-radius: 10px;
-    height: auto;
-    padding: 10px;
+.title:hover {
+  z-index: 1;
+  box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
 }
 
-#blog-text{
-    border-radius: 10px;
-    padding:10px;
+.header {
+  display: flex;
+  align-items: flex-end;
+  padding: 70px;
+  justify-content: center;
+  align-items: flex-end;
+}
+.form {
+  display: flex;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 60px;
+  /* width: 70vw; */
+  height: 50vh;
+  color: whitesmoke;
+  font-family: sans-serif;
+  z-index: 0;
+}
+.form:hover {
+  z-index: 1;
+  box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+.content {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+#blog-title {
+  border-radius: 10px;
+  height: auto;
+  padding: 10px;
 }
 
-#add-btn{
-    border-radius: 10px;
-    padding: 10px;
-    background-color: whitesmoke;
-    color: black;
-    float: center;
+#blog-text {
+  border-radius: 10px;
+  padding: 10px;
+  
 }
-#add-btn:hover{
-    color: whitesmoke;
-    background-color: black;
+
+#add-btn {
+  border-radius: 10px;
+  padding: 10px;
+  background-color: whitesmoke;
+  color: black;
+  float: center;
+}
+#add-btn:hover {
+  color: whitesmoke;
+  background-color: black;
+}
+.container0 {
+  display: flex;
+  justify-content: center;
+}
+input {
+  width: 100%;
+  padding: 10px;
+}
+textarea {
+  width: 100%;
+  padding: 10px;
+  height:100%;
+}
+label{
+  font-size: 2vh;
 }
